# chessboard

./: CMakeLists.txt  callWest  prj.conf  prj.conf.LVGLANDWIFI  prj.conf.oriol
boards/: arduino_uno_r4_wifi.conf  arduino_uno_r4_wifi.overlay  kk.conf  kk.overlay  rpi_pico_w.conf  rpi_pico_w.overlay
bootloader/: downloadbootloader.readme
src/: main.c
